deploy/sparkit-frontend-deploy/sparkit-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2048M
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: sparkit-ui-ingress
  namespace: spark-operator
spec:
  rules:
    - host: bdkit.info
      http:
        paths:
          - backend:
              serviceName: sparkit-ui-service
              servicePort: 80
            path: /sparkit(/|$)(.*)
            pathType: ImplementationSpecific
